# py-ant-maze

./: .gitignore  GUIDE.md  LICENSE  README.md  ant_maze.py  ant_maze_config.py  buttons.json  example_config.json  example_maze.txt  landmark_30.yaml  manifest.txt  output.usda  pyproject.toml  pyproject.txt  requirements.txt  setup.py
examples/: basic_usage.py  maze.yaml  maze_visualization.py  random_agent.py
maze_editor/: .gitignore  README.md  package-lock.json  package.json
maze_generator/: README.md  pyproject.toml
maze_generator/src/maze_generator/: __init__.py  __main__.py  export_options.py  geometry.py  materials.py  types.py  usd_writer.py
maze_generator/src/maze_generator/default_assets/: README.md
maze_generator/src/maze_generator/default_assets/materials/wall_1/: .collect.mapping.json  wall_1.usd
maze_generator/src/maze_generator/default_assets/materials/wall_1/SubUSDs/materials/: Brick_Wall_Red.mdl
maze_generator/src/maze_generator/maze_boolean/: __init__.py  union.py
maze_generator/src/maze_generator/maze_geometry/: __init__.py  extractor.py  models.py
maze_generator/src/maze_generator/maze_materials/: __init__.py  color.py  discovery.py  source.py  usd_nodes.py
maze_generator/src/maze_generator/maze_obj/: __init__.py  writer.py
maze_generator/src/maze_generator/maze_usd/: __init__.py  material_library.py  mesh_primitives.py  wall_writers.py  writer.py
output_bundle/: collider.mtl  visual.mtl
py_ant_maze/: README.md  __init__.py  ant_maze.py  ant_maze_config.py  grid.py  maze.py  pyproject.toml
tests/: __init__.py  (+2 more)
(+117 files in other folders)
